--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "docker:dev": "npm run dev",
     "docker:compose:dev": "docker-compose down && docker compose -f compose.dev.yaml up --build",
-    "docker:compose:prod": "docker-compose down && docker compose -f compose.yaml up -d --build",
+    "docker:compose:prod": "docker-compose down && docker compose -f compose.yaml up --build",
     "docker:compose:db:only": "docker-compose down && docker compose -f compose.db.yaml up -d --build",
     "docker:compose:db": "docker-compose down && docker compose -f compose.db.yaml up -d --build && npm run dev",
     "postinstall": "prisma generate"
